# chatroom

./: Error.hpp  Message.hpp  Method.hpp  README.md  Redis.hpp  TaskSocket.hpp  Threadmanage.hpp  test.cpp
client/: CMakeLists.txt  client.hpp  clientmain.cpp  file.cpp  friend.cpp  group.cpp  menu.cpp  sign.cpp
file/1012/: Redis.hpp
server/: CMakeLists.txt  file.cpp  friend.cpp  group.cpp  server.hpp  servermain.cpp  sign.cpp  transfer.cpp  user.cpp
sever/: user.cpp
